--- a/finance/bond-calculator.html
+++ b/finance/bond-calculator.html
@@ -276,7 +276,7 @@ Everyday Life
     
     <div class="currency-or-unit-input">
   <input   inputmode="numeric" pattern="[0-9]*" type="text" id="yield-input">
-  <span  class="unit-display">%
+  <span class="unit-display">%
   </span>
 </div>
     <div class="input-options">
@@ -320,8 +320,8 @@ Everyday Life
   
   <div class="currency-or-unit-input">
   
-  <input   inputmode="numeric" pattern="[0-9]*"  type="text" id="timeofmaturity" >
-  <span style="padding-right: 10px;" class="unit-display">years </span>
+  <input inputmode="numeric" pattern="[0-9]*"  type="text" id="timeofmaturity" >
+  <span class="unit-display">years </span>
 </div>
 <div class="input-options">
    <div class="input-options-item">
