--- a/food/coffee-calculator.html
+++ b/food/coffee-calculator.html
@@ -447,8 +447,8 @@ Everyday Life
     
     <div class="currency-or-unit-input">
   
-  <input   inputmode="numeric" pattern="[0-9]*"  type="text" id="" value="" />
-  <span style="padding-right: 10px;" class="unit-display" >mg
+  <input inputmode="numeric" pattern="[0-9]*"  type="text" id="" value=""/>
+  <span class="unit-display" >mg
   </span>
 </div>
     <div class="input-options">
@@ -493,7 +493,7 @@ Everyday Life
   <div class="currency-or-unit-input">
   
   <input   inputmode="numeric" pattern="[0-9]*"  type="text" id="totalCaffeine"/>
-  <span style="padding-right: 10px;" class="unit-display" >mg
+  <span class="unit-display" >mg
   </span>
 </div>
   <div class="input-options">
