--- a/other/facebook-ads-cost-calculator.html
+++ b/other/facebook-ads-cost-calculator.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="Estimate the cost of your facebook ad campaigns.">
 
 <link rel="canonical" href="https://calclulo.com/other/facebook-ads-cost-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/other/facebook-ads-cost-calculator">
 <meta property="og:title" content="Facebook Ads Cost Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="Estimate the cost of your facebook ad campaigns.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
@@ -31,7 +31,7 @@
     "@type": "WebPage",
     "name": "Facebook Ads Cost Calculator",
     "url": "https://calclulo.com/other/facebook-ads-cost-calculator",
-    "description": "",
+    "description": "Estimate the cost of your facebook ad campaigns.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -357,7 +357,7 @@ Clear all changes
 <article class="description-txt">
    <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">Calculator</span></h2>
    <p>
-     
+     Our facebook ads cost calculator allow you to estimate the cost of your facebook ad campaigns.
    </p>
  </article>
   </section>
