--- a/other/tiktok-coin-calculator.html
+++ b/other/tiktok-coin-calculator.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="Get the value of your tiktok coins in united states dollars.">
 
 <link rel="canonical" href="https://calclulo.com/other/tiktok-coin-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/other/tiktok-coin-calculator">
 <meta property="og:title" content="TikTok Coin Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="Get the value of your tiktok coins in united states dollars.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
@@ -31,7 +31,7 @@
     "@type": "WebPage",
     "name": "TikTok Coin Calculator",
     "url": "https://calclulo.com/other/tiktok-coin-calculator",
-    "description": "",
+    "description": "Get the value of your tiktok coins in united states dollars.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -257,7 +257,7 @@ Clear all changes
 <article class="description-txt">
    <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
    <p>
-     
+     Our tiktok coin calculator allows you to find out the value of your tiktok coins in united states dollars.
    </p>
  </article>
   </section>
