--- a/other/tip-calculator.html
+++ b/other/tip-calculator.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="Our tip calculator determines the amount of tips under different situations. It can also calculate the tip amount split between a given number of people.">
 
 <link rel="canonical" href="https://calclulo.com/other/tip-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/other/tip-calculator">
 <meta property="og:title" content="Tip Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="Our tip calculator determines the amount of tips under different situations. It can also calculate the tip amount split between a given number of people.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48">
@@ -33,7 +33,7 @@
     "@type": "WebPage",
     "name": "Tip Calculator",
     "url": "https://calclulo.com/other/tip-calculator",
-    "description": "",
+    "description": "Our tip calculator determines the amount of tips under different situations. It can also calculate the tip amount split between a given number of people.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -556,7 +556,7 @@ Clear all changes
 <article class="description-txt">
    <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">Calculator</span></h2>
    <p>
-     
+     Our tip calculator determines the amount of tips under different situations. It can also calculate the tip amount split between a given number of people.
    </p>
  </article>
   </section>
