--- a/other/website-bandwidth-calculator.html
+++ b/other/website-bandwidth-calculator.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="Our Website Bandwidth Calculator helps you determine how much bandwidth your website consumes.">
 
 <link rel="canonical" href="https://calclulo.com/other/website-bandwidth-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/other/website-bandwidth-calculator">
 <meta property="og:title" content="Website Bandwidth Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="Our Website Bandwidth Calculator helps you determine how much bandwidth your website consumes.">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
@@ -30,7 +30,7 @@
     "@type": "WebPage",
     "name": "Website Bandwidth Calculator",
     "url": "https://calclulo.com/everyday-life/website-bandwidth-calculator",
-    "description": "",
+    "description": "Our Website Bandwidth Calculator helps you determine how much bandwidth your website consumes.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -337,7 +337,7 @@ Everyday Life
      <div class="currency-or-unit-input">
    
    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="EstimatedMonthlyBandwidth" >
-   <span style="padding-right: 10px;letter-spacing: 1px;" class="unit-display">GB/month
+   <span class="unit-display">GB/month
    </span>
  </div>
     
@@ -412,7 +412,7 @@ Clear all changes
 <article class="description-txt">
    <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
    <p>
-     
+     Our Website Bandwidth Calculator helps you determine how much bandwidth your website consumes.
    </p>
  </article>
   </section>
