--- a/other/youtube-ad-revenue-calculator.html
+++ b/other/youtube-ad-revenue-calculator.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="Estimate how much your channel could potentially earn from google adSense.">
 
 <link rel="canonical" href="https://calclulo.com/other/youtube-ad-revenue-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/other/youtube-ad-revenue-calculator">
 <meta property="og:title" content="YouTube Ad Revenue Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="Estimate how much your channel could potentially earn from google adSense.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
@@ -31,7 +31,7 @@
     "@type": "WebPage",
     "name": "YouTube Ad Revenue Calculator",
     "url": "https://calclulo.com/other/youtube-ad-revenue-calculator",
-    "description": "",
+    "description": "Estimate how much you could potentially earn from google adSense as a monetized youTube creator",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -438,9 +438,9 @@ Clear all changes
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
-     
+     Our youTube ad revenue calculator allows you to estimate how much you could potentially earn from google adSense as a monetized youTube creator.
    </p>
  </article>
   </section>
