--- a/other/youtube-cpm-calculator.html
+++ b/other/youtube-cpm-calculator.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="Determine the cost per thousand views of your youtube campaigns.">
 
 <link rel="canonical" href="https://calclulo.com/other/youtube-cpm-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/other/youtube-cpm-calculator">
 <meta property="og:title" content="YouTube CPM Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="Determine the cost per thousand views of your youtube campaigns.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
@@ -31,7 +31,7 @@
     "@type": "WebPage",
     "name": "YouTube CPM Calculator",
     "url": "https://calclulo.com/other/youtube-cpm-calculator",
-    "description": "",
+    "description": "Determine the cost per thousand views of your youtube campaigns.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -347,7 +347,7 @@ Clear all changes
 <article class="description-txt">
    <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
-     
+    The youtube cpm calculator allows you to find out the cost per thousand views of your youtube campaigns.
    </p>
  </article>
   </section>
