--- a/other/youtube-watch-time-calculator.html
+++ b/other/youtube-watch-time-calculator.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="Find out how many views you need to hit the 4000 hours of watch time so you apply for the youtube partner program.">
 
 <link rel="canonical" href="https://calclulo.com/other/youtube-watch-time-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/other/youtube-watch-time-calculator">
 <meta property="og:title" content="YouTube Watch Time Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="Find out how many views you need to hit the 4000 hours of watch time so you apply for the youtube partner program.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
@@ -31,7 +31,7 @@
     "@type": "WebPage",
     "name": "YouTube Watch Time Calculator",
     "url": "https://calclulo.com/other/youtube-watch-time-calculator",
-    "description": "",
+    "description": "Find out how many views you need to hit the 4000 hours of watch time so you apply for the youtube partner program.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -229,17 +229,17 @@ Everyday Life
     </label>
   
   
-  <div class="input-select-wrap">
+  <div class="double-row-inputs-wrap">
   
   <div class="currency-or-unit-input">
-    <input   inputmode="numeric" pattern="[0-9]*" style="padding-left: 0;" type="text" id="avgMinutes">
-    <span style="padding-right: 10px;" class="unit-display">minutes
+    <input inputmode="numeric" pattern="[0-9]*" type="text" id="avgMinutes">
+    <span class="unit-display secondary-style">minutes
     </span>
   </div>
   
   <div class="currency-or-unit-input">
-    <input   inputmode="numeric" pattern="[0-9]*" style="padding-left: 0;" type="text" id="avgSeconds">
-    <span style="padding-right: 10px;" class="unit-display">seconds</span>
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="avgSeconds">
+    <span class="unit-display secondary-style">seconds</span>
   </div>
   
 </div>
@@ -421,8 +421,8 @@ Everyday Life
   <label style="margin-top: 25px;">Required Views <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
   
   <div class="currency-or-unit-input">
-  <input    inputmode="numeric" pattern="[0-9]*" style="padding-left: 0;" type="text" id="RequiredViews">
-  <span style="padding-right: 10px;" class="unit-display">views
+  <input    inputmode="numeric" pattern="[0-9]*" type="text" id="RequiredViews">
+  <span class="unit-display">views
   </span>
 </div>
 <div class="input-options">
@@ -491,9 +491,9 @@ Clear all changes
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
-     
+    The youtube watch time calculator helps you estimate how many views you need to hit the 4000 hours of watch time so you apply for the youtube partner program.
    </p>
  </article>
   </section>
