--- a/other/edpi-calculator.html
+++ b/other/edpi-calculator.html
@@ -12,14 +12,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="The eDPI Calculator finds your effective mouse sensitivity so you can optimize sensitivity settings for games like Valorant, CS2, and Fortnite.">
 
 <link rel="canonical" href="https://calclulo.com/other/edpi-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/other/edpi-calculator">
 <meta property="og:title" content="eDPI Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="The eDPI Calculator finds your effective mouse sensitivity so you can optimize sensitivity settings for games like Valorant, CS2, and Fortnite.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
@@ -30,7 +30,7 @@
     "@type": "WebPage",
     "name": "eDPI Calculator",
     "url": "https://calclulo.com/other/edpi-calculator",
-    "description": "",
+    "description": "The eDPI Calculator finds your effective mouse sensitivity so you can optimize sensitivity settings for games like Valorant, CS2, and Fortnite.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -178,12 +178,16 @@ Everyday Life
 
 <div class="container">
   <div data-input-id="mouse-dpi-edpi-calculator" class="input-group">
-    <label>Enter Mouse DPI
+    <label>🖱️ Enter Mouse DPI
     <svg id="input-tip-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M440-280h80v-240h-80v240Zm40-320q17 0 28.5-11.5T520-640q0-17-11.5-28.5T480-680q-17 0-28.5 11.5T440-640q0 17 11.5 28.5T480-600Zm0 520q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg>
 <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg>
 
     </label>
-    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="dpi" >
+    <div class="currency-or-unit-input">
+  <input inputmode="numeric" pattern="[0-9]*" type="text" id="dpi" >
+  <span class="unit-display secondary-style">dots per inch
+  </span>
+</div>
     <span class="input-tips">Your mouse's hardware sensitivity. Example: 400 to 1600 DPI is common.</span>
     <div class="input-options">
    <div class="input-options-item">
@@ -379,7 +383,7 @@ Clear all changes
 <article class="description-txt">
    <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">Calculator</span></h2>
    <p>
-     
+    The eDPI Calculator finds your effective mouse sensitivity so you can optimize sensitivity settings for games like Valorant, CS2, and Fortnite. 
    </p>
  </article>
   </section>
