--- a/other/facebook-money-calculator.html
+++ b/other/facebook-money-calculator.html
@@ -12,14 +12,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="Estimate how much you could potentially earn as a monetized Facebook creator.">
 
 <link rel="canonical" href="https://calclulo.com/other/facebook-money-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/other/facebook-money-calculator">
 <meta property="og:title" content="Facebook Money Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="Estimate how much you could potentially earn as a monetized Facebook creator.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
@@ -30,7 +30,7 @@
     "@type": "WebPage",
     "name": "Facebook Money Calculator",
     "url": "https://calclulo.com/other/facebook-money-calculator",
-    "description": "",
+    "description": "Estimate how much you could potentially earn as a monetized Facebook creator.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -439,7 +439,7 @@ Clear all changes
 <article class="description-txt">
    <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
-     
+     The Facebook Money Calculator helps you estimate how much you could potentially earn as a monetized Facebook creator.
    </p>
  </article>
   </section>
