--- a/other/tiktok-money-calculator.html
+++ b/other/tiktok-money-calculator.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="This Tiktok Money Calculator estimates how much you could potentially earn as a monetized Tiktok creator.">
 
 <link rel="canonical" href="https://calclulo.com/other/tiktok-money-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/other/tiktok-money-calculator">
 <meta property="og:title" content="Tiktok Money Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="This Tiktok Money Calculator estimates how much you could potentially earn as a monetized Tiktok creator.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
@@ -31,7 +31,7 @@
     "@type": "WebPage",
     "name": "Tiktok Money Calculator",
     "url": "https://calclulo.com/other/tiktok-money-calculator",
-    "description": "",
+    "description": "This Tiktok Money Calculator estimates how much you could potentially earn as a monetized Tiktok creator.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -438,7 +438,7 @@ Clear all changes
 <article class="description-txt">
    <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">Calculator</span></h2>
    <p>
-     
+     The Tiktok Money Calculator estimates your potential earnings as a monetized Tiktok creator.
    </p>
  </article>
   </section>
